--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,36 +1,40 @@
 .App {
-    font-family: "DM Sans", sans-serif;
-    background-color: #f8f8f8;
-    min-height: 100vh;
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  a {
-    color: #fff;
-    transition: color ease-in-out 0.3s;
-  }
-  
-  a:hover {
-    text-decoration: none;
-  }
-  
-  a:hover i {
-    color: #b4b4b4;
-    transition: color ease-in-out 0.3s;
-  }
-  
-  i {
-    color: #fff;
-    font-size: 1.2rem;
-    padding: 7px;
-    vertical-align: middle;
-  }
-  
-  i:hover {
-    cursor: pointer;
-    transition: color ease-in-out 0.3s;
-    color: #b4b4b4;
-  }
+  font-family: "DM Sans", sans-serif;
+  background-color: #f8f8f8;
+  min-height: 100vh;
+}
+
+.Main {
+  padding-top: 81px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+a {
+  color: #fff;
+  transition: color ease-in-out 0.3s;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:hover i {
+  color: rgb(148, 203, 236);
+  transition: color ease-in-out 0.3s;
+}
+
+i {
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 7px;
+  vertical-align: middle;
+}
+
+i:hover {
+  cursor: pointer;
+  transition: color ease-in-out 0.3s;
+  color: rgb(148, 203, 236);
+}
