--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,4 +1,12 @@
 .NavBar {
-    background-color: rgb(49, 49, 156);
-    border-bottom: 1px solid #0d0927;
-  }
+  background-color: rgb(49, 49, 156);
+  border-bottom: 1px solid #0d0927;
+}
+
+.NavLink {
+  padding: 5px;
+}
+
+.Active i {
+  color: rgb(148, 203, 236);
+}
