--- a/src/App.module.css
+++ b/src/App.module.css
@@ -8,6 +8,25 @@
   padding-top: 81px;
 }
 
+.Content {
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 2px;
+  border: 1px solid #dadadf;
+}
+
+.FillerImage {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+
+.Image {
+  max-height: 40vh;
+  max-width: 100%;
+  object-fit: contain;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -26,6 +45,10 @@ a:hover i {
   transition: color ease-in-out 0.3s;
 }
 
+input[type="file"] {
+  display: none;
+}
+
 i {
   color: #fff;
   font-size: 1.2rem;
@@ -37,4 +60,23 @@ i:hover {
   cursor: pointer;
   transition: color ease-in-out 0.3s;
   color: rgb(148, 203, 236);
+}
+
+figure {
+  text-align: center;
+  display: inline-block;
+}
+
+/* scrollbar */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+*::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+*::-webkit-scrollbar-thumb {
+  background: #888;
+}
+*::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
