--- a/src/styles/Car.module.css
+++ b/src/styles/Car.module.css
@@ -1,8 +1,9 @@
 .Car {
   background-color: #ffffff;
   border: 1px solid #dadadf;
-  border-radius: 2px;
-  margin-bottom: 16px;
+  box-shadow: 1px 3px 2px #888888;
+  border-radius: 6px;
+  margin-bottom: 5px;
   text-align: center;
 }
 
