style: navbar tidy-ups

--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -11,9 +11,9 @@
   color: rgb(148, 203, 236);
 }
 .Slogan {
-  display: inline-block;
-  font-size: 0.9rem;
+  display: inline;
+  font-size: 0.8rem;
   font-style: italic;
   color:#fff;
-  padding: 0 10px;
+  padding: 0 2px 0 10px;
 }
