--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: "DM Sans", sans-serif;
+  font-family: 'Lato', sans-serif;
   background-color: #f8f8f8;
   min-height: 100vh;
 }
@@ -64,7 +64,7 @@ nav i {
   color: #fff;
 }
 
-i:hover {
+nav i:hover {
   cursor: pointer;
   transition: color ease-in-out 0.3s;
   color: rgb(148, 203, 236);
